--- a/html/index.html
+++ b/html/index.html
@@ -92,35 +92,35 @@
                         </a>
                     </div>
                     <div class="col-sm-4 product">
-                        <a href="#product2" class="fancybox" rel="product">
+                        <a href="#" data-id="product2">
                             <img src="img/product2.png" alt=""><br>
 
                             <div class="h4"><span>Кисломолочная</span><br><span>продукция</span></div>
                         </a>
                     </div>
                     <div class="col-sm-4 product">
-                        <a href="#product3" class="fancybox" rel="product">
+                        <a href="#" data-id="product3">
                             <img src="img/product3.png" alt=""><br>
 
                             <div class="h4"><span>Творожная</span> <br><span>продукция</span></div>
                         </a>
                     </div>
                     <div class="col-sm-4 product">
-                        <a href="#product4" class="fancybox" rel="product">
+                        <a href="#" data-id="product4">
                             <img src="img/product4.png" alt=""><br>
 
                             <div class="h4"><span>Йогуртно-десертная</span><br> <span>группа</span></div>
                         </a>
                     </div>
                     <div class="col-sm-4 product">
-                        <a href="#product5" class="fancybox" rel="product">
+                        <a href="#" data-id="product5">
                             <img src="img/product5.png" alt=""><br>
 
                             <div class="h4"><span>Масло. Сыры</span></div>
                         </a>
                     </div>
                     <div class="col-sm-4 product">
-                        <a href="#product6" class="fancybox" rel="product">
+                        <a href="#" data-id="product6">
                             <img src="img/product6.png" alt=""><br>
 
                             <div class="h4"><span>Весовая</span><br><span>продукция</span></div>
@@ -484,8 +484,7 @@
     <!-- this container only for first level product catalo -->
 
     <!-- this blocks only for product page. -->
-    <div id="product-md-1">
-        <div class="prev"></div>
+    <div id="product-md-1" data-cat="category-1">
         <div class="title">
             <div class="h3">Молоко паст. 2,5% 500 г п/п</div>
         </div>
@@ -505,8 +504,26 @@
     </div>
 
 
-    <div id="product-md-2">
-        <div class="prev"></div>
+    <div id="product-md-2" data-cat="category-1">
+        <div class="title">
+            <div class="h3">Молоко паст. 2,5% 900 г п/п</div>
+        </div>
+        <div class="col-sm-8">
+            <img src="img/product_md_1_big.jpg" alt="">
+        </div>
+        <div class="col-sm-4">
+            <p>Для производства высококачественных молочных продуктов необходимо соответствующее сырье – самого высокого
+                качества, которое в нашей стране сегодня найти крайне сложно. Поэтому наш молокозавод расположен в
+                непосредственной близости от уникального комплекса «», одного из немногих в России, который способен
+                производить исключительное молочное сырье и, что немаловажно, регулярно – вне зависимости от смены
+                сезонов и прочих условий.</p>
+
+            <p>Для производства высококачественных молочных продуктов необходимо соответствующее сырье – самого
+                высокого качества, которое в нашей стране сегодня найти крайне сложно.</p>
+        </div>
+    </div>
+
+    <div id="product-md-3" data-cat="category-1">
         <div class="title">
             <div class="h3">Молоко паст. 2,5% 900 г п/п</div>
         </div>
